# MDfy

./: .gitignore  README.md  discloud.config  final.md  index.js  output.md  package-lock.json  package.json  pyproject.toml  vercel.json
api/: index.js
api/public/: Docs.html
demo/: Docs.html
public/: Docs.html
