[tool.poetry]
name = "mdfy"
version = "0.1.0"
description = ""
authors = ["internet_trash <naiknischal92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pdfkit = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
